--- a/src/main/resources/com/c195/Customer.fxml
+++ b/src/main/resources/com/c195/Customer.fxml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.c195.controller.CustomerController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.c195.controller.CustomerController">
+   <children>
+      <Label layoutX="360.0" layoutY="30.0" text="Customer">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <Button fx:id="exitButton" layoutX="420.0" layoutY="350.0" mnemonicParsing="false" onAction="#onActionExitButton" text="Exit">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Label layoutX="25.0" layoutY="95.0" text="Customer ID" />
+      <Label layoutX="25.0" layoutY="135.0" text="Customer Name" />
+      <Label layoutX="25.0" layoutY="175.0" text="Address" />
+      <Label layoutX="25.0" layoutY="215.0" text="Postal Code" />
+      <Label layoutX="25.0" layoutY="255.0" text="Country" />
+      <Label layoutX="450.0" layoutY="135.0" text="Phone Number" />
+      <Label layoutX="450.0" layoutY="255.0" text="State/Province" />
+      <Button fx:id="saveButton" layoutX="340.0" layoutY="350.0" mnemonicParsing="false" onAction="#onActionSaveButton" text="Save">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <TextField fx:id="custIDText" alignment="CENTER" disable="true" layoutX="145.0" layoutY="90.0" promptText="Auto Gen - Disabled" />
+      <TextField fx:id="custNameText" layoutX="145.0" layoutY="130.0" />
+      <TextField fx:id="custAddressText" layoutX="145.0" layoutY="170.0" />
+      <TextField fx:id="custPostalCodeText" layoutX="145.0" layoutY="210.0" />
+      <TextField fx:id="custPhoneText" layoutX="570.0" layoutY="130.0" />
+      <ComboBox fx:id="custCountryComboBox" layoutX="145.0" layoutY="250.0" prefWidth="150.0" />
+      <ComboBox fx:id="custDivisionComboBox" layoutX="570.0" layoutY="250.0" prefWidth="150.0" />
+   </children>
 </AnchorPane>
