--- a/src/main/resources/com/c195/Login.fxml
+++ b/src/main/resources/com/c195/Login.fxml
@@ -6,9 +6,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.c195.controller.LoginController">
    <children>
-      <Label layoutX="31.0" layoutY="22.0" text="Scheduling Management System">
+      <Label layoutX="31.0" layoutY="22.0" text="iCalendar">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="System Bold Italic" size="18.0" />
          </font>
       </Label>
       <Label fx:id="loginUserNameLabel" layoutX="25.0" layoutY="112.0" text="User Name" />
@@ -17,8 +17,16 @@
       <TextField fx:id="loginPasswordTextField" layoutX="104.0" layoutY="161.0" onAction="#OnActionLoginPasswordText" />
       <Label fx:id="loginLocationLabel" layoutX="26.0" layoutY="362.0" text="Location:" />
       <Label fx:id="loginUserLocationLabel" layoutX="84.0" layoutY="362.0" text="User Location" />
-      <Button fx:id="loginButton" layoutX="489.0" layoutY="336.0" mnemonicParsing="false" onAction="#OnActionLoginButton" text="Login" />
-      <Label layoutX="24.0" layoutY="250.0" text="Language" />
-      <ComboBox layoutX="104.0" layoutY="246.0" prefWidth="150.0" promptText="English" />
+      <Button fx:id="loginButton" layoutX="445.0" layoutY="349.0" mnemonicParsing="false" onAction="#OnActionLoginButton" text="Login">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Label fx:id="languageLabel" layoutX="24.0" layoutY="250.0" text="Language" />
+      <ComboBox fx:id="languageComboBox" layoutX="104.0" layoutY="246.0" prefWidth="150.0" promptText="English" />
+      <Button fx:id="exitButton" layoutX="516.0" layoutY="349.0" mnemonicParsing="false" onAction="#onActionExitButton" text="Exit">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
