--- a/src/main/resources/com/c195/Login.fxml
+++ b/src/main/resources/com/c195/Login.fxml
@@ -11,17 +11,17 @@
             <Font name="System Bold Italic" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="loginUserNameLabel" layoutX="25.0" layoutY="112.0" text="User Name" />
-      <TextField fx:id="loginUserNameTextField" layoutX="103.0" layoutY="108.0" onAction="#OnActionLoginUserNameText" />
-      <Label fx:id="loginPasswordLabel" layoutX="25.0" layoutY="165.0" text="Password" />
-      <TextField fx:id="loginPasswordTextField" layoutX="104.0" layoutY="161.0" onAction="#OnActionLoginPasswordText" />
+      <Label fx:id="loginUserNameLabel" layoutX="206.0" layoutY="89.0" text="User Name" />
+      <TextField fx:id="loginUserNameTextField" layoutX="206.0" layoutY="117.0" />
+      <Label fx:id="loginPasswordLabel" layoutX="205.0" layoutY="166.0" text="Password" />
+      <TextField fx:id="loginPasswordTextField" layoutX="206.0" layoutY="193.0" />
       <Label fx:id="loginUserLocationLabel" layoutX="25.0" layoutY="355.0" text="User Location" />
-      <Button fx:id="loginButton" layoutX="445.0" layoutY="349.0" mnemonicParsing="false" onAction="#OnActionLoginButton" text="Login">
+      <Button fx:id="loginButton" layoutX="209.0" layoutY="259.0" mnemonicParsing="false" onAction="#OnActionLoginButton" text="Login">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Label fx:id="languageLabel" layoutX="228.0" layoutY="355.0" text="Language" />
-      <Button fx:id="exitButton" layoutX="516.0" layoutY="349.0" mnemonicParsing="false" onAction="#onActionExitButton" text="Exit">
+      <Label fx:id="languageLabel" layoutX="498.0" layoutY="355.0" text="Language" />
+      <Button fx:id="exitButton" layoutX="210.0" layoutY="316.0" mnemonicParsing="false" onAction="#onActionExitButton" text="Exit">
          <font>
             <Font size="14.0" />
          </font>
